2008-07-31  chris fleizach  <cfleizach@apple.com>

        Reviewed by Alice Liu

        <rdar://problem/3563671> VO doesn't highlight characters when interacting when static text in web areas

        Need to expose the AXBoundsForRange parameter which allows an AX client to get the visible bounds
        for individual characters on a webpage.

        Test: accessibility/bounds-for-range.html

        * ChangeLog:
        * page/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::visiblePositionForIndex):
        * page/mac/AccessibilityObjectWrapper.mm:
        (-[AccessibilityObjectWrapper accessibilityParameterizedAttributeNames]):
        (-[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):

2008-07-31  Kevin Ollivier <kevino@theolliviers.com>

        Second attempt at Windows/wx build fix. Instead of avoiding inclusion of windows.h,
        use defines, etc. to avoid conflicts in each affected file.

        * config.h:
        * platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
        * platform/wx/PopupMenuWx.cpp:

2008-07-31  Erik Bunce  <elbunce@thehive.com>

        Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=20224

        Include the Writing Direction sub-menu in the context menu of all
        platforms but GTK. This fixes a regression introduced by revision
        34426.

        * platform/ContextMenu.cpp:
        (WebCore::ContextMenu::populate):

2008-07-31  Brady Eidson  <beidson@apple.com>

        Reviewed by Adam and Hyatt

        Fix for <rdar://problem/6099748>

        Adds a "don't enforce CSS mime type in strict mode" quirk for iWeb 2

        * WebCore.base.exp:

        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::setCSSStyleSheet):

        * loader/CachedCSSStyleSheet.cpp:
        (WebCore::CachedCSSStyleSheet::canUseSheet):
        * loader/CachedCSSStyleSheet.h:
        (WebCore::CachedCSSStyleSheet::sheetText): 